--- a/website/index.html
+++ b/website/index.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Custom CSS -->
     <link href="assets/css/style.css?v0.1" rel="stylesheet">
@@ -36,9 +37,57 @@
         src="https://cdn.rawgit.com/alesanchezr/html-template-engine/master/dist/html-template-engine.js?autoload"></script>
     <script type="text/javascript" src="assets/js/fix.js"></script>
 
+    <!-- First Heading -->
+    <div class="container mt-5">
+        <div class="row">
+
+            <!-- Left Text -->
+            <div class="col-8 p-3">
+                <div class="d-flex">
+                    <h2 class="me-2">The First Heading</h2>
+                    <h2 class="text-secondary"> Will Catch Your Eye</h2>
+                </div>
+                <p>Done ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
+                    euismod semper. Praesent commodo cursus magna, vel scelerisque nisl
+                    consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            </div>
+
+            <!-- Right Image -->
+            <div class="col-3">
+                <img class="rounded-circle" src="website/assets/img/1.jpg" alt="walter-white" width="300" height="300">
+            </div>
+
+        </div>
+    </div>
+
+    <!-- Second Heading -->
+    <div class="container mt-5">
+        <div class="row">
+
+            <!-- Left Image -->
+            <div class="col-3">
+                <img class="rounded-circle" src="website/assets/img/2.jpg" alt="person texting away" width="300"
+                    height="300">
+            </div>
+
+            <!-- Right Text -->
+            <div class="col-8 p-3">
+                <div class="d-flex">
+                    <h2 class="me-2">The Second Heading</h2>
+                    <h2 class="text-secondary"> Is Cool Too</h2>
+                </div>
+                <p>Done ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
+                    euismod semper. Praesent commodo cursus magna, vel scelerisque nisl
+                    consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            </div>
+        </div>
+    </div>
+
 
     <!-- Optional JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 
 </body>
 
