--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
     <title>One Page Wonder - Start Bootstrap Template</title>
     <!-- Required meta tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href=""
+    <link href="/workspaces/exercise-collaborative-html-website/website/assets/img"
 
     <!-- Bootstrap CSS -->
 
